# crossguid

./: CMakeLists.txt  Guid.cpp
cmake/: PlatformDependencies.cmake
